--- a/index.html
+++ b/index.html
@@ -254,6 +254,28 @@
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
+							<a href="article/article022.html">
+								<img src="images/Article/article022.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">如何提升孩⼦的內在動機</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 3分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 211 </i>
+									<i class="fa fa-heart-o"> 87 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
 							<a href="article/article021.html">
 								<img src="images/Article/article021.png" alt="Card image">
 								<div class="line"></div>
@@ -294,28 +316,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article019.html">
-								<img src="images/Article/article019.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">孩子咬字發音不準確 =「黐脷筋」？</h5>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 4分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 200 </i>
-									<i class="fa fa-heart-o"> 102 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				
 
 				<!-- Repeat this block for each card -->
 				<!--<div class="col-md-4">
