--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
 
 					<div class="col-sm-4 team-grid">
 						<!-- normal -->
-						<div class="card-content">
+						<div class="card-content4">
 							<h3>Ms. Alice</h3>
 							<p></p>
 							<b>
@@ -196,7 +196,7 @@
 
 					<div class="col-sm-4 team-grid">
 						<!-- normal -->
-						<div class="card-content">
+						<div class="card-content4">
 							<h3>Ms. Joanna</h3>
 							<p></p>
 							<b>
