--- a/article/article023.html
+++ b/article/article023.html
@@ -7,10 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="keywords" content="" />
-	<meta property="og:title" content="沉默是金？— 認識選擇性緘默症" />
-	<meta property="og:description" content="選擇性緘默症是甚麼?選擇性緘默症是焦慮症的其中一種。患有選擇性緘默症的孩子雖然可以正常説話，但在特定情境..." />
-	<meta property="og:image" content="../images/Article/article013.png" />
-	<meta property="og:url" content="article/article013.html" />
+	<meta property="og:title" content="睡前對孩子說的話" />
+	<meta property="og:description" content="每晚睡覺前都會跟孩子聊天嗎？放工回到家，洗澡和晚飯後孩子已差不多要睡覺了。無論是..." />
+	<meta property="og:image" content="../images/Article/article023.png" />
+	<meta property="og:url" content="article/article023.html" />
 	<script
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- bootstrap-css -->
@@ -176,7 +176,7 @@
 			<div class="article">
 				<div class="narrow-text">
 					<div style="display: flex; justify-content: space-between; align-items: center;">
-						<h2>沉默是金？— 認識選擇性緘默症</h2>
+						<h2>睡前對孩子說的話</h2>
 						<div style="position: relative; display: inline-block;">
 							<button class="btn btn-success"
 								style="position: relative; display: flex; align-items: center;"
@@ -208,40 +208,45 @@
 						</div>
 					</div>
 					<p>撰文：諾道團隊</p>
-					<p>已更新：01-12-2024</p>
+					<p>已更新：02-07-2025</p>
 				</div>
 				<div style="text-align: center;">
-					<img src="../images/Article/article013.png" style="max-width: 100%;" />
+					<img src="../images/Article/article023.png" style="max-width: 100%;" />
 				</div>
 				<hr>
 				<div class="panel-body narrow-text">
-					<h4><b>選擇性緘默症是甚麼?</b></h4>
-					選擇性緘默症是焦慮症的其中一種。患有選擇性緘默症的孩子雖然可以正常説話，但在特定情境下(例如：學校、興趣班、公眾場合)就說不出口，影響他們的社交生活和情緒狀態。<br><br>
 
-					<h4><b>如何診斷選擇性緘默症？</b></h4>
-					選擇性緘默症普遍由精神科專科醫生作診斷，根據《精神疾病診斷與統計⼿冊》第五版(DSM-V)，選擇性緘默症的診斷標準有五項：<br>
-					- 持續地在特定社交情境無法說話，但在其他情境能正常交談<br>
-					- 上述困難影響學業及社交溝通<br>
-					- 障礙持續至少一個月(不包括入學的第一個月)<br>
-					- 不是因為語言不通而導致無法說話 (例如剛遷移至新的⽂化環境)<br>
-					- 無法說話的主因不是發展性障礙或其他精神疾病 (例如自閉症)<br><br>
+					每晚睡覺前都會跟孩子聊天嗎？放工回到家，洗澡和晚飯後孩子已差不多要睡覺了。無論是在職父母或是全職照顧者，每天都非常忙碌，時間有限，如何製造有質素的睡前傾談時間呢？ <br><br>
 
-					<h4><b>孩子是否只是「怕醜」？</b></h4>
-					性格較害羞的孩子在不同環境的社交表現通常大同小異，給予他們一些時間便會逐漸放鬆，慢慢融入社交環境。<br>
-					相反，患有選擇性緘默症的孩子在特定環境下，即使過了一段很長的適應期(例如一個學期)，仍然處於「有口難言」的狀態，或情況只有輕微改善。另外，他們在不同環境下可謂判若兩人，在感到輕鬆自在的環境，例如在家中跟爸爸媽媽相處時是一隻「開籠雀」，但在其他情境則完全不說話。<br><br>
+					<ol>
+						<li><b>問問孩子「你今天點呀？How was your day？」</b><br>
+							這條開放性問題的好處是不為孩子的答案加上框框，先讓孩子想想當天最深刻、最特別、最想與你分享的是哪一件事情。當然這對於年齡較少或語言能力較弱的小朋友比較困難，家長可以在觀察子女的反應及回應後，恰到好處地分享自己當天的一件事情，例如：「媽媽今日午餐去咗間新餐廳，我本來好期待㗎，點知個豬扒飯唔好食，好失望呀！」，「爸爸今日完成咗個大project，好攰不過終於鬆一口氣！」<br><br>
 
-					<h4><b>如何幫助忠患有選擇性緘默症的孩子？</b></h4>
-					大部分選擇性緘默症個案並不會自然痊癒。不少人因以為「大大下就會講」而導致孩子錯過治療黃金期。一般來說，越早介入，治療效果越佳。<br>
-					精神科醫生作診斷後，一般會透過遊戲輔導/治療、言語治療、心理輔導等介入幫助孩子。<br><br>
+							有時孩子可能只回答「幾好/都係咁」或豎起手指公，家長可按照自己對子女的理解，以「不強迫」為原則，慢慢鼓勵孩子多表達，因為 「只要你想講，媽媽就想聽」。</li>
+						<br>
 
-					<h4><b>獎勵孩子說話有用嗎？</b></h4>
-					根據我們的臨床經驗，獎勵對於患有選擇性緘默症的孩子幫助不大，有時甚至適得其反。因為他們並不是⽋缺說話動機，而是「本身渴望與人說話，只是有口說不出」；相反，獎勵有機會增加他們的壓⼒，令他們更難開口。<br><br>
+						<li><b>擴闊情緒詞彙量</b><br>
+							承接上一點，多讓孩子聽到不同的情緒字眼，例如「失望、緊張、擔心、忟憎、疲累、興奮、期待、滿足」等，按孩子的年齡及理解能力，逐步擴闊孩子的情緒詞彙量，不再只停留在「開心」和「唔開心」。<br><br>
+
+
+						<li><b>讓孩子知道你愛他</b><br>
+							「I LOVE YOU」對你來說可能不難開口，重點是讓孩子知道無論他是乖是曳、聽話跳皮、默書滿分還是低分、早上出門時有還是沒有對大廈保安說早晨、老師有沒有讚賞他，「無論你點樣，媽媽都係咁愛你， I LOVE YOU BECAUSE YOU ARE YOU！」
+							<br><br>
+
+
+						<li><b>問問孩子「你今日最欣賞自己嘅係⋯？」</b><br>
+							「引導孩子欣賞自己」在成長路上非常重要！讓孩子喜歡自己做的事、覺得自己做得好，會令他成為一個自信心源自內在而非建基於他人的孩子。若要有人讚賞才感到自己有能力、才對自己有信心，那是多麼可悲呢！<br><br>
+
+						<li><b>讓孩子說說「若果可改變一件事⋯」</b><br>
+							這條假設性問題會暗暗地提升孩子的能力感！讓孩子的思想回到一件事情上：今日小息，琳琳笑我跌咗個餐盒，無得食茶點⋯⋯如果返翻去小息嗰時，我會坐低喺位先開個盒！現實不能改變，但內在能力感卻可以提升！這同時也提供一個反思進步的機會，令孩子成為一個更好的人。
+					</ol>
 
 					<h4><b>總結</b></h4>
-					透過溝通、理解和適當協助，就能幫助患有選擇性緘默症的孩子逐步建⽴健康心理，克服挑戰、展現潛⼒。<br><br>
+					與子女相處的時光眨眼即逝，好好捉緊和孩子聊聊東談談西的時間吧！<br><br>
 
 					把這篇文章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。<br>
 					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！
+
 				</div>
 			</div>
 			<!-- //article -->
@@ -264,42 +269,42 @@
 						<span><b>敬請預約</b></span>
 					</div>
 
-					 
 
-					</div>
 
-					<div class="clearfix"> </div>
 				</div>
+
+				<div class="clearfix"> </div>
 			</div>
 		</div>
-		<!-- //footer -->
-		<!-- copyright -->
-		<div class="agileits-w3layouts-copyright">
-			<div class="container">
-				<p>Copyright &copy; 2024.PROWAY SPEECH THERAPY All rights reserved.</p>
-			</div>
+	</div>
+	<!-- //footer -->
+	<!-- copyright -->
+	<div class="agileits-w3layouts-copyright">
+		<div class="container">
+			<p>Copyright &copy; 2024.PROWAY SPEECH THERAPY All rights reserved.</p>
 		</div>
-		<!-- //copyright -->
-		<script src="../js/SmoothScroll.min.js"></script>
-		<script type="text/javascript" src="../js/move-top.js"></script>
-		<script type="text/javascript" src="../js/easing.js"></script>
-		<!-- here stars scrolling icon -->
-		<script type="text/javascript">
-			$(document).ready(function () {
-				/*
-					var defaults = {
-					containerID: 'toTop', // fading element id
-					containerHoverID: 'toTopHover', // fading element hover id
-					scrollSpeed: 1200,
-					easingType: 'linear' 
-					};
-				*/
+	</div>
+	<!-- //copyright -->
+	<script src="../js/SmoothScroll.min.js"></script>
+	<script type="text/javascript" src="../js/move-top.js"></script>
+	<script type="text/javascript" src="../js/easing.js"></script>
+	<!-- here stars scrolling icon -->
+	<script type="text/javascript">
+		$(document).ready(function () {
+			/*
+				var defaults = {
+				containerID: 'toTop', // fading element id
+				containerHoverID: 'toTopHover', // fading element hover id
+				scrollSpeed: 1200,
+				easingType: 'linear' 
+				};
+			*/
 
-				$().UItoTop({ easingType: 'easeOutQuart' });
+			$().UItoTop({ easingType: 'easeOutQuart' });
 
-			});
-		</script>
-		<!-- //here ends scrolling icon -->
+		});
+	</script>
+	<!-- //here ends scrolling icon -->
 </body>
 
 </html>
