--- a/index.html
+++ b/index.html
@@ -254,6 +254,28 @@
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
+							<a href="article/article023.html">
+								<img src="images/Article/article023.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">睡前對孩子說的話</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 3分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 189 </i>
+									<i class="fa fa-heart-o"> 100 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
 							<a href="article/article022.html">
 								<img src="images/Article/article022.png" alt="Card image">
 								<div class="line"></div>
@@ -294,30 +316,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article020.html">
-								<img src="images/Article/article020.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">善用視覺程序時間表幫助ASD孩子</h5>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 3分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 154 </i>
-									<i class="fa fa-heart-o"> 75 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-
+				
 				<!-- Repeat this block for each card -->
 				<!--<div class="col-md-4">
 					<div class="card">
@@ -444,7 +443,7 @@
 			<div class="agile-footer-grids">
 				<div class="col-md-4 agile-footer-grid">
 					<h4>諾道言語治療</h4>
-					<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+					<span>地址：沙田石門安耀街5號W LUXE 21樓N3及23樓S15</span><br>
 					<span>電話：6532 8821</span><br>
 					<span>電郵：info@prowayst.com</span>
 				</div>
@@ -455,7 +454,7 @@
 					<span><b>敬請預約</b></span>
 				</div>
 
-				<!-- <div class="videos col-md-2 agile-footer-grid">-->
+				<!-- -->
 
 			</div>
 
