--- a/our-services/intervention.html
+++ b/our-services/intervention.html
@@ -161,6 +161,8 @@
 						<option value="#treatment2">綜合能力提升班</option>
 						<option value="#treatment3">諾道非凡個別訓練</option>
 						<option value="#treatment4">諾道感官探索班</option>
+						<option value="#treatment5">諾道藝術探索班</option>
+						<option value="#treatment6">諾道感統大肌訓練課程</option>
 					</select>
 				</div>
 			</div>
@@ -182,7 +184,7 @@
 					涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢A-PLUS密集訓練班"><img
+					⭐想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢A-PLUS密集訓練班"><img
 							src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
@@ -196,7 +198,7 @@
 				🔶 持3個⽉內⾔語治療評估報告可免評估<br>
 				🔶 每次治療後均會和家長傾談當節重點及跟進⽅向<br>
 				<br>
-				想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢個別言語治療"><img src="../images/whatsapp.png">
+				⭐想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢個別言語治療"><img src="../images/whatsapp.png">
 					6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
@@ -210,7 +212,7 @@
 				涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
 				<br>
 				<br>
-				想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢綜合能力提升班"><img src="../images/whatsapp.png">
+				⭐想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢綜合能力提升班"><img src="../images/whatsapp.png">
 					6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
@@ -227,7 +229,7 @@
 				涵蓋範疇：語⾔＋認知＋讀寫＋⼤⼩肌＋⾃理＋情緒
 				<br>
 				<br>
-				想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道非凡個別訓練"><img src="../images/whatsapp.png">
+				⭐想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道非凡個別訓練"><img src="../images/whatsapp.png">
 					6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
@@ -245,7 +247,49 @@
 				⭐ 每⽉推出不同主題，敬請留意IG/FB發佈的最新消息！
 				<br>
 				<br>
-				想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道感官探索班"><img src="../images/whatsapp.png">
+				⭐想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道感官探索班"><img src="../images/whatsapp.png">
+					6532 8821</a>，將有專人為你提供詳情。
+				</p>
+
+				<hr>
+				<p>
+				<h4><img src="../images/o7.png"> <b id="treatment5"> 諾道藝術探索班</b></h4><br>
+
+				諾道團隊深信每一位小朋友都有快樂探索的權利。唯現實中，父母為有特殊教育需要的子女
+				尋找興趣班時往往障礙重重⋯⋯常常聽到家長訴說子女因未能遵守規則，試堂後被勸退；又
+				或因未能理解及跟從指示，完成不了作品，由老師代筆⋯⋯<br><br>
+				諾道為特殊教育需要小朋友而設的藝術探索課程，以包容及接納態度讓小朋友探索不同顏
+				色、物料，製作獨一無二的作品；享受創作過程，體驗藝術的無限可能。<br><br>
+				5大特點，將探索學習的權利交回小朋友手上：<br>
+				✅ 高人手比例(1對3)<br>
+				✅ 兒童為本，相信每位小朋友都有自己的天賦和能力等待被看見<br>
+				✅ 每節與小朋友回顧過程，學習欣賞自己、整理內在經驗<br>
+				✅ 重點在於過程中探索嘗試，不為追求完美作品，不為完成作品而催促小朋友<br>
+				✅ 豐富素材，讓創意萌芽<br>
+				<br>
+				⭐ 每⽉推出不同主題，敬請留意IG/FB發佈的最新消息！
+				<br>
+				<br>
+				⭐想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道藝術探索班"><img src="../images/whatsapp.png">
+					6532 8821</a>，將有專人為你提供詳情。
+				</p>
+
+				<hr>
+				<p>
+				<h4><img src="../images/o8.png"> <b id="treatment6"> 諾道感統大肌訓練課程</b></h4><br>
+
+				📣 全新空間🤩 全新課程😎<br><br>
+				5大特點 <img style="margin-top: -6px;" src="../images/h1.png"> 為孩子打造非一般感統大肌訓練空間<br>
+				✅ 嶄新器材，令小朋友樂而忘返<br>
+				✅ 為本體覺+前庭平衡覺+觸覺三大感覺系統提供相應刺激<br>
+				✅ 針對提升反應能力+執行能力<br>
+				✅ 高人手比例(1對3)，確保孩子安全<br>
+				✅ 每次課後均會和家長傾談當節重點<br>
+				<br>
+				⭐ 每⽉推出不同主題，敬請留意IG/FB發佈的最新消息！
+				<br>
+				<br>
+				⭐想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢諾道感統大肌訓練課程"><img src="../images/whatsapp.png">
 					6532 8821</a>，將有專人為你提供詳情。
 				</p>
 			</div>
@@ -274,7 +318,7 @@
 			<div class="agile-footer-grids">
 				<div class="col-md-4 agile-footer-grid">
 					<h4>諾道言語治療</h4>
-					<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+					<span>地址：沙田石門安耀街5號W LUXE 21樓N3及23樓S15</span><br>
 					<span>電話：6532 8821</span><br>
 					<span>電郵：info@prowayst.com</span>
 				</div>
@@ -285,13 +329,13 @@
 					<span><b>敬請預約</b></span>
 				</div>
 
-				<div class="videos col-md-2 agile-footer-grid">
 
-				</div>
 
-				<div class="clearfix"> </div>
 			</div>
+
+			<div class="clearfix"> </div>
 		</div>
+	</div>
 	</div>
 	<!-- //footer -->
 	<!-- copyright -->
