--- a/our-services/prevention.html
+++ b/our-services/prevention.html
@@ -183,7 +183,7 @@
 		<div class="agile-footer-grids">
 			<div class="col-md-4 agile-footer-grid">
 				<h4>諾道言語治療</h4>
-				<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+				<span>地址：沙田石門安耀街5號W LUXE 21樓N3及23樓S15</span><br>
 				<span>電話：6532 8821</span><br>
 				<span>電郵：info@prowayst.com</span>
 			</div>
@@ -194,7 +194,7 @@
 				<span><b>敬請預約</b></span>
 			</div>
 
-			<div class="videos col-md-2 agile-footer-grid">
+			
 
 			</div>
 
