--- a/our-services/intervention.html
+++ b/our-services/intervention.html
@@ -255,11 +255,8 @@
 				<p>
 				<h4><img src="../images/o7.png"> <b id="treatment5"> 諾道藝術探索班</b></h4><br>
 
-				諾道團隊深信每一位小朋友都有快樂探索的權利。唯現實中，父母為有特殊教育需要的子女
-				尋找興趣班時往往障礙重重⋯⋯常常聽到家長訴說子女因未能遵守規則，試堂後被勸退；又
-				或因未能理解及跟從指示，完成不了作品，由老師代筆⋯⋯<br><br>
-				諾道為特殊教育需要小朋友而設的藝術探索課程，以包容及接納態度讓小朋友探索不同顏
-				色、物料，製作獨一無二的作品；享受創作過程，體驗藝術的無限可能。<br><br>
+				諾道團隊深信每一位小朋友都有快樂探索的權利。唯現實中，父母為有特殊教育需要的子女尋找興趣班時往往障礙重重⋯⋯常常聽到家長訴說子女因未能遵守規則，試堂後被勸退；又或因未能理解及跟從指示，完成不了作品，由老師代筆⋯⋯<br><br>
+				諾道為特殊教育需要小朋友而設的藝術探索課程，以包容及接納態度讓小朋友探索不同顏色、物料，製作獨一無二的作品；享受創作過程，體驗藝術的無限可能。<br><br>
 				5大特點，將探索學習的權利交回小朋友手上：<br>
 				✅ 高人手比例(1對3)<br>
 				✅ 兒童為本，相信每位小朋友都有自己的天賦和能力等待被看見<br>
